<resources>
    <string name="app_name">Acceleometer9</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tvHeading">LifeStream App</string>
    <string name="btnStart">Start</string>
    <string name="btnStop">Stop</string>
    <string name="btnSave">Save</string>
    <string name="result_tv">Reanimation Results</string>
    <string name="btn_Back">BACK</string>
    <string name="result_iv">resultImage</string>
    <string name="iV_alt_Text">push</string>
</resources>
