<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/resultLayout"
    android:background="#ffffffff"
    android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/result_tv"
            android:id="@+id/textView3"
            android:textStyle="bold|italic"
            android:textSize="25sp"
            android:textColor="#ff224b7b"
            android:singleLine="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right">

        <ImageView
            android:layout_width="74dp"
            android:layout_height="64dp"
            android:id="@+id/imageView2"
            android:src="@drawable/logo2"
            android:layout_marginRight="40dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSave"
            android:id="@+id/btnSave"
            android:textColor="#ffffffff"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_button"
            android:layout_marginRight="30dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_Back"
            android:id="@+id/btnBack"
            android:textColor="#ffffffff"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:background="@drawable/custom_button"
            android:layout_marginRight="30dp" />

    </LinearLayout>

    <View
        android:layout_width="360dp"
        android:layout_height="2dip"
        android:background="#000000"
        android:layout_marginTop="10dp"
        android:id="@+id/view"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:id="@+id/linLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:contentDescription="@string/result_iv" />
    </LinearLayout>
</LinearLayout>
